force-app/main/default/objects/PT_HttpRequest__mdt/PT_HttpRequest__mdt.object-meta.xml
<CustomObject>
    <label>PT_HttpRequest</label>
    <pluralLabel>PT_HttpRequests</pluralLabel>
</CustomObject>