force-app/main/default/objects/PT_HttpRequest__mdt/fields/PT_ActiveMock__c.field-meta.xml
<CustomField>
    <fullName>PT_ActiveMock__c</fullName>
    <label>Active Mock</label>
    <referenceTo>PT_HttpResponseMock__mdt</referenceTo>
    <relationshipLabel>PT_HttpRequests</relationshipLabel>
    <relationshipName>PT_HttpRequests</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>