force-app/main/default/objects/PT_HttpRequest__mdt/fields/PT_Description__c.field-meta.xml
<CustomField>
    <fullName>PT_Description__c</fullName>
    <description>Used to provide short description or comment regarding the request record.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>