force-app/main/default/objects/PT_HttpRequest__mdt/fields/PT_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>PT_Endpoint__c</fullName>
    <label>Endpoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>