force-app/main/default/objects/PT_HttpRequest__mdt/fields/PT_Identifier__c.field-meta.xml
<CustomField>
    <fullName>PT_Identifier__c</fullName>
    <description>Field used to query the record in code.</description>
    <inlineHelpText>Field used to query the record in code. Should be the same for Production and Sandbox version of the record.</inlineHelpText>
    <label>Identifier</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>