force-app/main/default/objects/PT_HttpRequest__mdt/fields/PT_NamedCredentials__c.field-meta.xml
<CustomField>
    <fullName>PT_NamedCredentials__c</fullName>
    <description>It&apos;s used to generate the full request endpoint.</description>
    <inlineHelpText>Provide a name of the Named Credentials to use. Only the name is needed, do not provide the &quot;callout:&quot; part.</inlineHelpText>
    <label>Named Credentials</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>