force-app/main/default/objects/PT_HttpRequest__mdt/fields/PT_Timeout__c.field-meta.xml
<CustomField>
    <fullName>PT_Timeout__c</fullName>
    <description>Timeout that will be set on the request</description>
    <inlineHelpText>In milliseconds. If left blank it&apos;s set to 10 000ms. Valid range is 1 - 120 000ms</inlineHelpText>
    <label>Timeout</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>