force-app/main/default/objects/PT_HttpRequest__mdt/fields/PT_UseInProduction__c.field-meta.xml
<CustomField>
    <fullName>PT_UseInProduction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to determine if the record should be used in Sandboxes or in Production.</description>
    <inlineHelpText>Used to determine if the record should be used in Sandboxes or in Production.</inlineHelpText>
    <label>Use in Production</label>
    <type>Checkbox</type>
</CustomField>