force-app/main/default/objects/PT_HttpRequest__mdt/validationRules/Endpoint_starting_with_slash.validationRule-meta.xml
<ValidationRule>
    <fullName>Endpoint_starting_with_slash</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(PT_Endpoint__c)), NOT(REGEX(PT_Endpoint__c, &apos;^/.*&apos;)))</errorConditionFormula>
    <errorDisplayField>PT_Endpoint__c</errorDisplayField>
    <errorMessage>The endpoint should start with &quot;/&quot; character.</errorMessage>
</ValidationRule>