force-app/main/default/objects/PT_HttpRequest__mdt/validationRules/Named_credentials_with_no_callout_part.validationRule-meta.xml
<ValidationRule>
    <fullName>Named_credentials_with_no_callout_part</fullName>
    <active>true</active>
    <errorConditionFormula>REGEX(LOWER(PT_NamedCredentials__c), &apos;^callout:.*&apos;)</errorConditionFormula>
    <errorDisplayField>PT_NamedCredentials__c</errorDisplayField>
    <errorMessage>Please use only the name of the Named Credentials - remove the &quot;callout:&quot; part.</errorMessage>
</ValidationRule>