force-app/main/default/objects/PT_HttpRequest__mdt/validationRules/Timeout_range_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Timeout_range_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(PT_Timeout__c)), OR(PT_Timeout__c &lt; 1, PT_Timeout__c &gt; 120000))</errorConditionFormula>
    <errorDisplayField>PT_Timeout__c</errorDisplayField>
    <errorMessage>The valid range is 1 - 120 000</errorMessage>
</ValidationRule>